--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,8 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    
-    <title>React App</title>
+    <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&display=swap" rel="stylesheet">
+    <title style="font-family: Dela Gothic One;">React App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
